--- a/web/themes/quartiers_solidaires/assets/components/molecules/pagination/pagination.scss
+++ b/web/themes/quartiers_solidaires/assets/components/molecules/pagination/pagination.scss
@@ -1,7 +1,6 @@
 @charset 'utf-8';
 
 .pagination-wrapper {
-  display: flex;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   flex-wrap: wrap;
